saving for now, I still need to get app.py mapped and working. It is only partially there. Postgres in python connected, but having trouble with base.classes.keys()

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -471,7 +471,7 @@
     "\n",
     "filter6.to_csv(\"Resources/filter6.csv\", index=False)\n",
     "\n",
-    "filter6.to_json(\"Resources/JSON_filter6.json\", index=False) "
+    "filter6.to_json(\"Resources/JSON_filter6.json\") "
    ]
   }
  ],
