--- a/postgres.ipynb
+++ b/postgres.ipynb
@@ -15,30 +15,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the connection engine\n",
+    "engine = create_engine(\"postgresql://postgres:password@localhost:5432/Project 3\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reflect Database into ORM classes\n",
+    "Base = automap_base()\n",
+    "Base.prepare(autoload_with=engine)\n",
+    "Base.classes.keys()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base.metadata.create_all(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "nbgrader": {
+     "grade": false,
+     "grade_id": "cell-b7dac605f16a05c6",
+     "locked": false,
+     "schema_version": 1,
+     "solution": true
+    }
+   },
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'psycopg2'",
+     "ename": "NameError",
+     "evalue": "name 'inspector' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Create the connection engine\u001b[39;00m\n\u001b[0;32m      2\u001b[0m engine \u001b[38;5;241m=\u001b[39m create_engine(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msqlite:///../Resources/employee_compensation.sqlite\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m engine \u001b[38;5;241m=\u001b[39m create_engine(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpostgresql://hollanotes:postgres@localhost/mydatabase\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32m<string>:2\u001b[0m, in \u001b[0;36mcreate_engine\u001b[1;34m(url, **kwargs)\u001b[0m\n",
-      "File \u001b[1;32mc:\\Users\\noell\\anaconda3\\Lib\\site-packages\\sqlalchemy\\util\\deprecations.py:281\u001b[0m, in \u001b[0;36mdeprecated_params.<locals>.decorate.<locals>.warned\u001b[1;34m(fn, *args, **kwargs)\u001b[0m\n\u001b[0;32m    274\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m kwargs:\n\u001b[0;32m    275\u001b[0m         _warn_with_version(\n\u001b[0;32m    276\u001b[0m             messages[m],\n\u001b[0;32m    277\u001b[0m             versions[m],\n\u001b[0;32m    278\u001b[0m             version_warnings[m],\n\u001b[0;32m    279\u001b[0m             stacklevel\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m,\n\u001b[0;32m    280\u001b[0m         )\n\u001b[1;32m--> 281\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\noell\\anaconda3\\Lib\\site-packages\\sqlalchemy\\engine\\create.py:601\u001b[0m, in \u001b[0;36mcreate_engine\u001b[1;34m(url, **kwargs)\u001b[0m\n\u001b[0;32m    599\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m kwargs:\n\u001b[0;32m    600\u001b[0m             dbapi_args[k] \u001b[38;5;241m=\u001b[39m pop_kwarg(k)\n\u001b[1;32m--> 601\u001b[0m     dbapi \u001b[38;5;241m=\u001b[39m dbapi_meth(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mdbapi_args)\n\u001b[0;32m    603\u001b[0m dialect_args[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdbapi\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m dbapi\n\u001b[0;32m    605\u001b[0m dialect_args\u001b[38;5;241m.\u001b[39msetdefault(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcompiler_linting\u001b[39m\u001b[38;5;124m\"\u001b[39m, compiler\u001b[38;5;241m.\u001b[39mNO_LINTING)\n",
-      "File \u001b[1;32mc:\\Users\\noell\\anaconda3\\Lib\\site-packages\\sqlalchemy\\dialects\\postgresql\\psycopg2.py:690\u001b[0m, in \u001b[0;36mPGDialect_psycopg2.import_dbapi\u001b[1;34m(cls)\u001b[0m\n\u001b[0;32m    688\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[0;32m    689\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mimport_dbapi\u001b[39m(\u001b[38;5;28mcls\u001b[39m):\n\u001b[1;32m--> 690\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpsycopg2\u001b[39;00m\n\u001b[0;32m    692\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m psycopg2\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'psycopg2'"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Collect the names of tables within the database\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m inspector\u001b[38;5;241m.\u001b[39mget_table_names()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'inspector' is not defined"
      ]
     }
    ],
    "source": [
-    "# Create the connection engine\n",
-    "engine = create_engine(\"sqlite:///../Resources/employee_compensation.sqlite\")\n",
-    "\n",
-    "engine = create_engine(\"postgresql://hollanotes:postgres@localhost/mydatabase\")"
+    "# Collect the names of tables within the database\n",
+    "inspector.get_table_names()"
    ]
   },
   {
@@ -57,85 +90,6 @@
    "source": [
     "# Create the inspector and connect it to the engine\n",
     "inspector = inspect(engine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-b7dac605f16a05c6",
-     "locked": false,
-     "schema_version": 1,
-     "solution": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['salaries']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Collect the names of tables within the database\n",
-    "inspector.get_table_names()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-2f9c9a505e8b0862",
-     "locked": false,
-     "schema_version": 1,
-     "solution": true
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "id INTEGER\n",
-      "OrganisationGroupCode INTEGER\n",
-      "JobFamilyCode TEXT\n",
-      "JobCode TEXT\n",
-      "YearType TEXT\n",
-      "Year INTEGER\n",
-      "OrganisationGroup TEXT\n",
-      "DepartmentCode TEXT\n",
-      "Department TEXT\n",
-      "UnionCode FLOAT\n",
-      "Union TEXT\n",
-      "JobFamily TEXT\n",
-      "Job TEXT\n",
-      "EmployeeIdentifier INTEGER\n",
-      "Salaries FLOAT\n",
-      "Overtime FLOAT\n",
-      "OtherSalaries FLOAT\n",
-      "TotalSalary FLOAT\n",
-      "Retirement FLOAT\n",
-      "HealthAndDental FLOAT\n",
-      "OtherBenefits FLOAT\n",
-      "TotalBenefits FLOAT\n",
-      "TotalCompensation FLOAT\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Using the inspector to print the column names within the 'Salaries' table and its types\n",
-    "columns = inspector.get_columns('Salaries')\n",
-    "for column in columns:\n",
-    "    print(column[\"name\"], column[\"type\"])"
    ]
   },
   {
