--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -37,6 +37,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>temp_index</th>\n",
        "      <th>id</th>\n",
        "      <th>stateId</th>\n",
        "      <th>countyId</th>\n",
@@ -46,7 +47,6 @@
        "      <th>is_bankOwned</th>\n",
        "      <th>is_forAuction</th>\n",
        "      <th>event</th>\n",
-       "      <th>time</th>\n",
        "      <th>...</th>\n",
        "      <th>parking</th>\n",
        "      <th>garageSpaces</th>\n",
@@ -63,6 +63,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>95717-2087851113</td>\n",
        "      <td>9</td>\n",
        "      <td>77</td>\n",
@@ -72,7 +73,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>Listed for sale</td>\n",
-       "      <td>1.610000e+12</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -87,6 +87,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>94564-18496265</td>\n",
        "      <td>9</td>\n",
        "      <td>189</td>\n",
@@ -96,7 +97,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>Listed for sale</td>\n",
-       "      <td>1.630000e+12</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
@@ -111,6 +111,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>94564-18484475</td>\n",
        "      <td>9</td>\n",
        "      <td>190</td>\n",
@@ -120,7 +121,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>Listed for sale</td>\n",
-       "      <td>1.630000e+12</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
@@ -135,6 +135,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>4</td>\n",
        "      <td>94564-18494835</td>\n",
        "      <td>9</td>\n",
        "      <td>191</td>\n",
@@ -144,7 +145,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>Listed for sale</td>\n",
-       "      <td>1.630000e+12</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -159,6 +159,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>94564-2069722747</td>\n",
        "      <td>9</td>\n",
        "      <td>192</td>\n",
@@ -168,7 +169,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>Listed for sale</td>\n",
-       "      <td>1.630000e+12</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -183,30 +183,30 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 38 columns</p>\n",
+       "<p>5 rows × 39 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 id  stateId  countyId  cityId country datePostedString  \\\n",
-       "0  95717-2087851113        9        77   24895     USA        1/13/2021   \n",
-       "1    94564-18496265        9       189   36958     USA        7/12/2021   \n",
-       "2    94564-18484475        9       190   36958     USA         7/8/2021   \n",
-       "3    94564-18494835        9       191   36958     USA         7/7/2021   \n",
-       "4  94564-2069722747        9       192   36958     USA         7/7/2021   \n",
+       "   temp_index                id  stateId  countyId  cityId country  \\\n",
+       "0           1  95717-2087851113        9        77   24895     USA   \n",
+       "1           2    94564-18496265        9       189   36958     USA   \n",
+       "2           3    94564-18484475        9       190   36958     USA   \n",
+       "3           4    94564-18494835        9       191   36958     USA   \n",
+       "4           5  94564-2069722747        9       192   36958     USA   \n",
        "\n",
-       "   is_bankOwned  is_forAuction            event          time  ...  parking  \\\n",
-       "0             0              0  Listed for sale  1.610000e+12  ...        0   \n",
-       "1             0              0  Listed for sale  1.630000e+12  ...        1   \n",
-       "2             0              0  Listed for sale  1.630000e+12  ...        1   \n",
-       "3             0              0  Listed for sale  1.630000e+12  ...        1   \n",
-       "4             0              0  Listed for sale  1.630000e+12  ...        0   \n",
+       "  datePostedString  is_bankOwned  is_forAuction            event  ...  \\\n",
+       "0        1/13/2021             0              0  Listed for sale  ...   \n",
+       "1        7/12/2021             0              0  Listed for sale  ...   \n",
+       "2         7/8/2021             0              0  Listed for sale  ...   \n",
+       "3         7/7/2021             0              0  Listed for sale  ...   \n",
+       "4         7/7/2021             0              0  Listed for sale  ...   \n",
        "\n",
-       "   garageSpaces hasGarage     levels  pool spa  isNewConstruction  \\\n",
-       "0             0         0          0     0   0                  0   \n",
-       "1             2         1  One Story     0   0                  0   \n",
-       "2             2         1  One Story     0   0                  0   \n",
-       "3             1         1  Two Story     0   1                  0   \n",
-       "4             0         0          0     0   0                  0   \n",
+       "   parking  garageSpaces  hasGarage     levels pool  spa isNewConstruction  \\\n",
+       "0        0             0          0          0    0    0                 0   \n",
+       "1        1             2          1  One Story    0    0                 0   \n",
+       "2        1             2          1  One Story    0    0                 0   \n",
+       "3        1             1          1  Two Story    0    1                 0   \n",
+       "4        0             0          0          0    0    0                 0   \n",
        "\n",
        "   hasPetsAllowed       homeType               county  \n",
        "0               0            LOT        Placer County  \n",
@@ -215,7 +215,7 @@
        "3               0  SINGLE_FAMILY  Contra Costa County  \n",
        "4               0            LOT  Contra Costa County  \n",
        "\n",
-       "[5 rows x 38 columns]"
+       "[5 rows x 39 columns]"
       ]
      },
      "execution_count": 2,
@@ -225,7 +225,7 @@
    ],
    "source": [
     "# Read the data into a Pandas DataFrame\n",
-    "realEstateCa_df = pd.read_csv('Resources/RealEstate_California.csv')\n",
+    "realEstateCa_df = pd.read_csv('Resources/RealEstate_California2.csv')\n",
     "realEstateCa_df.head()"
    ]
   },
@@ -240,49 +240,50 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 35389 entries, 0 to 35388\n",
-      "Data columns (total 38 columns):\n",
+      "Data columns (total 39 columns):\n",
       " #   Column              Non-Null Count  Dtype  \n",
       "---  ------              --------------  -----  \n",
-      " 0   id                  35389 non-null  object \n",
-      " 1   stateId             35389 non-null  int64  \n",
-      " 2   countyId            35389 non-null  int64  \n",
-      " 3   cityId              35389 non-null  int64  \n",
-      " 4   country             35389 non-null  object \n",
-      " 5   datePostedString    35386 non-null  object \n",
-      " 6   is_bankOwned        35389 non-null  int64  \n",
-      " 7   is_forAuction       35389 non-null  int64  \n",
-      " 8   event               35100 non-null  object \n",
-      " 9   time                35100 non-null  float64\n",
-      " 10  price               35389 non-null  int64  \n",
-      " 11  pricePerSquareFoot  35389 non-null  int64  \n",
-      " 12  city                35389 non-null  object \n",
-      " 13  state               35389 non-null  object \n",
-      " 14  yearBuilt           35389 non-null  int64  \n",
-      " 15  streetAddress       35388 non-null  object \n",
-      " 16  zipcode             35364 non-null  float64\n",
-      " 17  longitude           35389 non-null  float64\n",
-      " 18  latitude            35389 non-null  float64\n",
-      " 19  hasBadGeocode       35389 non-null  int64  \n",
-      " 20  description         35110 non-null  object \n",
-      " 21  currency            35389 non-null  object \n",
-      " 22  livingArea          35389 non-null  int64  \n",
-      " 23  livingAreaValue     35389 non-null  float64\n",
-      " 24  lotAreaUnits        35389 non-null  object \n",
-      " 25  bathrooms           35389 non-null  int64  \n",
-      " 26  bedrooms            35389 non-null  int64  \n",
-      " 27  buildingArea        35389 non-null  int64  \n",
-      " 28  parking             35389 non-null  int64  \n",
-      " 29  garageSpaces        35389 non-null  int64  \n",
-      " 30  hasGarage           35389 non-null  int64  \n",
-      " 31  levels              35389 non-null  object \n",
-      " 32  pool                35389 non-null  int64  \n",
-      " 33  spa                 35389 non-null  int64  \n",
-      " 34  isNewConstruction   35389 non-null  int64  \n",
-      " 35  hasPetsAllowed      35389 non-null  int64  \n",
-      " 36  homeType            35389 non-null  object \n",
-      " 37  county              35389 non-null  object \n",
-      "dtypes: float64(5), int64(20), object(13)\n",
-      "memory usage: 10.3+ MB\n"
+      " 0   temp_index          35389 non-null  int64  \n",
+      " 1   id                  35389 non-null  object \n",
+      " 2   stateId             35389 non-null  int64  \n",
+      " 3   countyId            35389 non-null  int64  \n",
+      " 4   cityId              35389 non-null  int64  \n",
+      " 5   country             35389 non-null  object \n",
+      " 6   datePostedString    35386 non-null  object \n",
+      " 7   is_bankOwned        35389 non-null  int64  \n",
+      " 8   is_forAuction       35389 non-null  int64  \n",
+      " 9   event               35100 non-null  object \n",
+      " 10  time                35100 non-null  float64\n",
+      " 11  price               35389 non-null  int64  \n",
+      " 12  pricePerSquareFoot  35389 non-null  int64  \n",
+      " 13  city                35389 non-null  object \n",
+      " 14  state               35389 non-null  object \n",
+      " 15  yearBuilt           35389 non-null  int64  \n",
+      " 16  streetAddress       35388 non-null  object \n",
+      " 17  zipcode             35364 non-null  float64\n",
+      " 18  longitude           35389 non-null  float64\n",
+      " 19  latitude            35389 non-null  float64\n",
+      " 20  hasBadGeocode       35389 non-null  int64  \n",
+      " 21  description         35110 non-null  object \n",
+      " 22  currency            35389 non-null  object \n",
+      " 23  livingArea          35389 non-null  int64  \n",
+      " 24  livingAreaValue     35389 non-null  float64\n",
+      " 25  lotAreaUnits        35389 non-null  object \n",
+      " 26  bathrooms           35389 non-null  int64  \n",
+      " 27  bedrooms            35389 non-null  int64  \n",
+      " 28  buildingArea        35389 non-null  int64  \n",
+      " 29  parking             35389 non-null  int64  \n",
+      " 30  garageSpaces        35389 non-null  int64  \n",
+      " 31  hasGarage           35389 non-null  int64  \n",
+      " 32  levels              35389 non-null  object \n",
+      " 33  pool                35389 non-null  int64  \n",
+      " 34  spa                 35389 non-null  int64  \n",
+      " 35  isNewConstruction   35389 non-null  int64  \n",
+      " 36  hasPetsAllowed      35389 non-null  int64  \n",
+      " 37  homeType            35389 non-null  object \n",
+      " 38  county              35389 non-null  object \n",
+      "dtypes: float64(5), int64(21), object(13)\n",
+      "memory usage: 10.5+ MB\n"
      ]
     }
    ],
@@ -300,14 +301,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['id', 'stateId', 'countyId', 'cityId', 'country', 'datePostedString',\n",
-      "       'is_bankOwned', 'is_forAuction', 'event', 'time', 'price',\n",
-      "       'pricePerSquareFoot', 'city', 'state', 'yearBuilt', 'streetAddress',\n",
-      "       'zipcode', 'longitude', 'latitude', 'hasBadGeocode', 'description',\n",
-      "       'currency', 'livingArea', 'livingAreaValue', 'lotAreaUnits',\n",
-      "       'bathrooms', 'bedrooms', 'buildingArea', 'parking', 'garageSpaces',\n",
-      "       'hasGarage', 'levels', 'pool', 'spa', 'isNewConstruction',\n",
-      "       'hasPetsAllowed', 'homeType', 'county'],\n",
+      "Index(['temp_index', 'id', 'stateId', 'countyId', 'cityId', 'country',\n",
+      "       'datePostedString', 'is_bankOwned', 'is_forAuction', 'event', 'time',\n",
+      "       'price', 'pricePerSquareFoot', 'city', 'state', 'yearBuilt',\n",
+      "       'streetAddress', 'zipcode', 'longitude', 'latitude', 'hasBadGeocode',\n",
+      "       'description', 'currency', 'livingArea', 'livingAreaValue',\n",
+      "       'lotAreaUnits', 'bathrooms', 'bedrooms', 'buildingArea', 'parking',\n",
+      "       'garageSpaces', 'hasGarage', 'levels', 'pool', 'spa',\n",
+      "       'isNewConstruction', 'hasPetsAllowed', 'homeType', 'county'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -350,49 +351,50 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 34814 entries, 0 to 35388\n",
-      "Data columns (total 38 columns):\n",
+      "Data columns (total 39 columns):\n",
       " #   Column              Non-Null Count  Dtype  \n",
       "---  ------              --------------  -----  \n",
-      " 0   id                  34814 non-null  object \n",
-      " 1   stateId             34814 non-null  int64  \n",
-      " 2   countyId            34814 non-null  int64  \n",
-      " 3   cityId              34814 non-null  int64  \n",
-      " 4   country             34814 non-null  object \n",
-      " 5   datePostedString    34814 non-null  object \n",
-      " 6   is_bankOwned        34814 non-null  int64  \n",
-      " 7   is_forAuction       34814 non-null  int64  \n",
-      " 8   event               34814 non-null  object \n",
-      " 9   time                34814 non-null  float64\n",
-      " 10  price               34814 non-null  int64  \n",
-      " 11  pricePerSquareFoot  34814 non-null  int64  \n",
-      " 12  city                34814 non-null  object \n",
-      " 13  state               34814 non-null  object \n",
-      " 14  yearBuilt           34814 non-null  int64  \n",
-      " 15  streetAddress       34814 non-null  object \n",
-      " 16  zipcode             34814 non-null  float64\n",
-      " 17  longitude           34814 non-null  float64\n",
-      " 18  latitude            34814 non-null  float64\n",
-      " 19  hasBadGeocode       34814 non-null  int64  \n",
-      " 20  description         34814 non-null  object \n",
-      " 21  currency            34814 non-null  object \n",
-      " 22  livingArea          34814 non-null  int64  \n",
-      " 23  livingAreaValue     34814 non-null  float64\n",
-      " 24  lotAreaUnits        34814 non-null  object \n",
-      " 25  bathrooms           34814 non-null  int64  \n",
-      " 26  bedrooms            34814 non-null  int64  \n",
-      " 27  buildingArea        34814 non-null  int64  \n",
-      " 28  parking             34814 non-null  int64  \n",
-      " 29  garageSpaces        34814 non-null  int64  \n",
-      " 30  hasGarage           34814 non-null  int64  \n",
-      " 31  levels              34814 non-null  object \n",
-      " 32  pool                34814 non-null  int64  \n",
-      " 33  spa                 34814 non-null  int64  \n",
-      " 34  isNewConstruction   34814 non-null  int64  \n",
-      " 35  hasPetsAllowed      34814 non-null  int64  \n",
-      " 36  homeType            34814 non-null  object \n",
-      " 37  county              34814 non-null  object \n",
-      "dtypes: float64(5), int64(20), object(13)\n",
-      "memory usage: 10.4+ MB\n"
+      " 0   temp_index          34814 non-null  int64  \n",
+      " 1   id                  34814 non-null  object \n",
+      " 2   stateId             34814 non-null  int64  \n",
+      " 3   countyId            34814 non-null  int64  \n",
+      " 4   cityId              34814 non-null  int64  \n",
+      " 5   country             34814 non-null  object \n",
+      " 6   datePostedString    34814 non-null  object \n",
+      " 7   is_bankOwned        34814 non-null  int64  \n",
+      " 8   is_forAuction       34814 non-null  int64  \n",
+      " 9   event               34814 non-null  object \n",
+      " 10  time                34814 non-null  float64\n",
+      " 11  price               34814 non-null  int64  \n",
+      " 12  pricePerSquareFoot  34814 non-null  int64  \n",
+      " 13  city                34814 non-null  object \n",
+      " 14  state               34814 non-null  object \n",
+      " 15  yearBuilt           34814 non-null  int64  \n",
+      " 16  streetAddress       34814 non-null  object \n",
+      " 17  zipcode             34814 non-null  float64\n",
+      " 18  longitude           34814 non-null  float64\n",
+      " 19  latitude            34814 non-null  float64\n",
+      " 20  hasBadGeocode       34814 non-null  int64  \n",
+      " 21  description         34814 non-null  object \n",
+      " 22  currency            34814 non-null  object \n",
+      " 23  livingArea          34814 non-null  int64  \n",
+      " 24  livingAreaValue     34814 non-null  float64\n",
+      " 25  lotAreaUnits        34814 non-null  object \n",
+      " 26  bathrooms           34814 non-null  int64  \n",
+      " 27  bedrooms            34814 non-null  int64  \n",
+      " 28  buildingArea        34814 non-null  int64  \n",
+      " 29  parking             34814 non-null  int64  \n",
+      " 30  garageSpaces        34814 non-null  int64  \n",
+      " 31  hasGarage           34814 non-null  int64  \n",
+      " 32  levels              34814 non-null  object \n",
+      " 33  pool                34814 non-null  int64  \n",
+      " 34  spa                 34814 non-null  int64  \n",
+      " 35  isNewConstruction   34814 non-null  int64  \n",
+      " 36  hasPetsAllowed      34814 non-null  int64  \n",
+      " 37  homeType            34814 non-null  object \n",
+      " 38  county              34814 non-null  object \n",
+      "dtypes: float64(5), int64(21), object(13)\n",
+      "memory usage: 10.6+ MB\n"
      ]
     }
    ],
