--- a/postgres.ipynb
+++ b/postgres.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "['realestateca', 'realestateca2']"
+       "['filter6', 'realestateca', 'realestateca2']"
       ]
      },
      "execution_count": 2,
@@ -103,19 +103,19 @@
        "  'autoincrement': False,\n",
        "  'comment': None},\n",
        " {'name': 'datepostedstring',\n",
-       "  'type': DATE(),\n",
+       "  'type': VARCHAR(),\n",
        "  'nullable': True,\n",
        "  'default': None,\n",
        "  'autoincrement': False,\n",
        "  'comment': None},\n",
        " {'name': 'is_bankowned',\n",
-       "  'type': BOOLEAN(),\n",
+       "  'type': VARCHAR(),\n",
        "  'nullable': True,\n",
        "  'default': None,\n",
        "  'autoincrement': False,\n",
        "  'comment': None},\n",
        " {'name': 'is_forauction',\n",
-       "  'type': BOOLEAN(),\n",
+       "  'type': VARCHAR(),\n",
        "  'nullable': True,\n",
        "  'default': None,\n",
        "  'autoincrement': False,\n",
@@ -187,7 +187,7 @@
        "  'autoincrement': False,\n",
        "  'comment': None},\n",
        " {'name': 'hasbadgeocode',\n",
-       "  'type': BOOLEAN(),\n",
+       "  'type': VARCHAR(),\n",
        "  'nullable': True,\n",
        "  'default': None,\n",
        "  'autoincrement': False,\n",
@@ -241,7 +241,7 @@
        "  'autoincrement': False,\n",
        "  'comment': None},\n",
        " {'name': 'parking',\n",
-       "  'type': BOOLEAN(),\n",
+       "  'type': VARCHAR(),\n",
        "  'nullable': True,\n",
        "  'default': None,\n",
        "  'autoincrement': False,\n",
@@ -253,7 +253,7 @@
        "  'autoincrement': False,\n",
        "  'comment': None},\n",
        " {'name': 'hasgarage',\n",
-       "  'type': BOOLEAN(),\n",
+       "  'type': VARCHAR(),\n",
        "  'nullable': True,\n",
        "  'default': None,\n",
        "  'autoincrement': False,\n",
@@ -265,25 +265,25 @@
        "  'autoincrement': False,\n",
        "  'comment': None},\n",
        " {'name': 'pool',\n",
-       "  'type': BOOLEAN(),\n",
+       "  'type': VARCHAR(),\n",
        "  'nullable': True,\n",
        "  'default': None,\n",
        "  'autoincrement': False,\n",
        "  'comment': None},\n",
        " {'name': 'spa',\n",
-       "  'type': BOOLEAN(),\n",
+       "  'type': VARCHAR(),\n",
        "  'nullable': True,\n",
        "  'default': None,\n",
        "  'autoincrement': False,\n",
        "  'comment': None},\n",
        " {'name': 'isnewconstruction',\n",
-       "  'type': BOOLEAN(),\n",
+       "  'type': VARCHAR(),\n",
        "  'nullable': True,\n",
        "  'default': None,\n",
        "  'autoincrement': False,\n",
        "  'comment': None},\n",
        " {'name': 'haspetsallowed',\n",
-       "  'type': BOOLEAN(),\n",
+       "  'type': VARCHAR(),\n",
        "  'nullable': True,\n",
        "  'default': None,\n",
        "  'autoincrement': False,\n",
@@ -308,7 +308,7 @@
     }
    ],
    "source": [
-    "inspector.get_columns('realestateca2')\n",
+    "inspector.get_columns('filter6')\n",
     "\n"
    ]
   },
@@ -347,6 +347,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>temp_index</th>\n",
        "      <th>id</th>\n",
        "      <th>stateid</th>\n",
        "      <th>countyid</th>\n",
@@ -356,7 +357,6 @@
        "      <th>is_bankowned</th>\n",
        "      <th>is_forauction</th>\n",
        "      <th>event</th>\n",
-       "      <th>time</th>\n",
        "      <th>...</th>\n",
        "      <th>parking</th>\n",
        "      <th>garagespaces</th>\n",
@@ -373,159 +373,159 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2</td>\n",
        "      <td>94564-18496265</td>\n",
        "      <td>9.0</td>\n",
        "      <td>189.0</td>\n",
        "      <td>36958.0</td>\n",
        "      <td>USA</td>\n",
-       "      <td>2021-07-12</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>7/12/2021</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Listed for sale</td>\n",
-       "      <td>1.630000e+12</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "      <td>One Story</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>SINGLE_FAMILY</td>\n",
        "      <td>Contra Costa County</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>3</td>\n",
        "      <td>94564-18484475</td>\n",
        "      <td>9.0</td>\n",
        "      <td>190.0</td>\n",
        "      <td>36958.0</td>\n",
        "      <td>USA</td>\n",
-       "      <td>2021-07-08</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>7/8/2021</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Listed for sale</td>\n",
-       "      <td>1.630000e+12</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "      <td>One Story</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>SINGLE_FAMILY</td>\n",
        "      <td>Contra Costa County</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>4</td>\n",
        "      <td>94564-18494835</td>\n",
        "      <td>9.0</td>\n",
        "      <td>191.0</td>\n",
        "      <td>36958.0</td>\n",
        "      <td>USA</td>\n",
-       "      <td>2021-07-07</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>7/7/2021</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Listed for sale</td>\n",
-       "      <td>1.630000e+12</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "      <td>Two Story</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>SINGLE_FAMILY</td>\n",
        "      <td>Contra Costa County</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>6</td>\n",
        "      <td>94564-18484390</td>\n",
        "      <td>9.0</td>\n",
        "      <td>193.0</td>\n",
        "      <td>36958.0</td>\n",
        "      <td>USA</td>\n",
-       "      <td>2021-07-06</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>7/6/2021</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Listed for sale</td>\n",
-       "      <td>1.630000e+12</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "      <td>One Story</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>SINGLE_FAMILY</td>\n",
        "      <td>Contra Costa County</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>7</td>\n",
        "      <td>94564-50919342</td>\n",
        "      <td>9.0</td>\n",
        "      <td>194.0</td>\n",
        "      <td>36958.0</td>\n",
        "      <td>USA</td>\n",
-       "      <td>2021-07-05</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>7/5/2021</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Listed for sale</td>\n",
-       "      <td>1.630000e+12</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "      <td>Two Story</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>SINGLE_FAMILY</td>\n",
        "      <td>Contra Costa County</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 38 columns</p>\n",
+       "<p>5 rows × 39 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               id  stateid  countyid   cityid country datepostedstring  \\\n",
-       "0  94564-18496265      9.0     189.0  36958.0     USA       2021-07-12   \n",
-       "1  94564-18484475      9.0     190.0  36958.0     USA       2021-07-08   \n",
-       "2  94564-18494835      9.0     191.0  36958.0     USA       2021-07-07   \n",
-       "3  94564-18484390      9.0     193.0  36958.0     USA       2021-07-06   \n",
-       "4  94564-50919342      9.0     194.0  36958.0     USA       2021-07-05   \n",
+       "  temp_index              id  stateid  countyid   cityid country  \\\n",
+       "0          2  94564-18496265      9.0     189.0  36958.0     USA   \n",
+       "1          3  94564-18484475      9.0     190.0  36958.0     USA   \n",
+       "2          4  94564-18494835      9.0     191.0  36958.0     USA   \n",
+       "3          6  94564-18484390      9.0     193.0  36958.0     USA   \n",
+       "4          7  94564-50919342      9.0     194.0  36958.0     USA   \n",
        "\n",
-       "   is_bankowned  is_forauction            event          time  ...  parking  \\\n",
-       "0         False          False  Listed for sale  1.630000e+12  ...     True   \n",
-       "1         False          False  Listed for sale  1.630000e+12  ...     True   \n",
-       "2         False          False  Listed for sale  1.630000e+12  ...     True   \n",
-       "3         False          False  Listed for sale  1.630000e+12  ...     True   \n",
-       "4         False          False  Listed for sale  1.630000e+12  ...     True   \n",
+       "  datepostedstring is_bankowned is_forauction            event  ...  parking  \\\n",
+       "0        7/12/2021            0             0  Listed for sale  ...        1   \n",
+       "1         7/8/2021            0             0  Listed for sale  ...        1   \n",
+       "2         7/7/2021            0             0  Listed for sale  ...        1   \n",
+       "3         7/6/2021            0             0  Listed for sale  ...        1   \n",
+       "4         7/5/2021            0             0  Listed for sale  ...        1   \n",
        "\n",
-       "   garagespaces hasgarage     levels   pool    spa  isnewconstruction  \\\n",
-       "0           2.0      True  One Story  False  False              False   \n",
-       "1           2.0      True  One Story  False  False              False   \n",
-       "2           1.0      True  Two Story  False   True              False   \n",
-       "3           2.0      True  One Story  False  False              False   \n",
-       "4           2.0      True  Two Story  False  False              False   \n",
+       "   garagespaces  hasgarage     levels pool  spa isnewconstruction  \\\n",
+       "0           2.0          1  One Story    0    0                 0   \n",
+       "1           2.0          1  One Story    0    0                 0   \n",
+       "2           1.0          1  Two Story    0    1                 0   \n",
+       "3           2.0          1  One Story    0    0                 0   \n",
+       "4           2.0          1  Two Story    0    0                 0   \n",
        "\n",
        "   haspetsallowed       hometype               county  \n",
-       "0           False  SINGLE_FAMILY  Contra Costa County  \n",
-       "1           False  SINGLE_FAMILY  Contra Costa County  \n",
-       "2           False  SINGLE_FAMILY  Contra Costa County  \n",
-       "3           False  SINGLE_FAMILY  Contra Costa County  \n",
-       "4           False  SINGLE_FAMILY  Contra Costa County  \n",
+       "0               0  SINGLE_FAMILY  Contra Costa County  \n",
+       "1               0  SINGLE_FAMILY  Contra Costa County  \n",
+       "2               0  SINGLE_FAMILY  Contra Costa County  \n",
+       "3               0  SINGLE_FAMILY  Contra Costa County  \n",
+       "4               0  SINGLE_FAMILY  Contra Costa County  \n",
        "\n",
-       "[5 rows x 38 columns]"
+       "[5 rows x 39 columns]"
       ]
      },
      "execution_count": 6,
@@ -535,7 +535,7 @@
    ],
    "source": [
     "# Query All Records in the the Database\n",
-    "data = pd.read_sql(\"SELECT * FROM realestateca\", conn)\n",
+    "data = pd.read_sql(\"SELECT * FROM filter6\", conn)\n",
     "\n",
     "# Preview the Data\n",
     "data.head()"
@@ -549,7 +549,7 @@
     {
      "data": {
       "text/plain": [
-       "['realestateca2']"
+       "['filter6', 'realestateca2']"
       ]
      },
      "execution_count": 7,
