--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import dependencies\n",
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "from pprint import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +219,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +330,7 @@
        "31238"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +434,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,16 +472,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export categories_df and subcategories_df as CSV files.\n",
     "\n",
-    "\n",
-    "filter6.to_csv(\"Resources/filter6.csv\", index=False)\n",
+    "filter6.to_csv(\"Resources/filter6.csv\")\n",
     "\n",
     "filter6.to_json(\"Resources/JSON_filter6.json\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['temp_index', 'id', 'stateId', 'countyId', 'cityId', 'country',\n",
+      "       'datePostedString', 'is_bankOwned', 'is_forAuction', 'event', 'time',\n",
+      "       'price', 'pricePerSquareFoot', 'city', 'state', 'yearBuilt',\n",
+      "       'streetAddress', 'zipcode', 'longitude', 'latitude', 'hasBadGeocode',\n",
+      "       'description', 'currency', 'livingArea', 'livingAreaValue',\n",
+      "       'lotAreaUnits', 'bathrooms', 'bedrooms', 'buildingArea', 'parking',\n",
+      "       'garageSpaces', 'hasGarage', 'levels', 'pool', 'spa',\n",
+      "       'isNewConstruction', 'hasPetsAllowed', 'homeType', 'county'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(realEstateCa_df.columns)"
    ]
   }
  ],
